@@ -12,14 +12,23 @@ Queries the health of the cluster for monitoring purposes. The response is a JSO
   - `Endpoint`: A string representing the network endpoint of the server.
   - `Role`: The role the server plays. Possible values are `"AGENT"`, `"COORDINATOR"`, and `"DBSERVER"`.
   - `CanBeDeleted`: Boolean representing whether the node can safely be removed from the cluster.
-  
-  Additionally, if the node is a Coordinator or DBServer, it will also have the following attributes:
-  - `AdvertisedEndpoint`: A string representing the advertised endpoint (e.g. external IP address or load balancer, optional)
-  - `Status`: A string indicating the health of the node as assessed by the supervision (agency). This should be considered primary source of truth for node health. If the node is responding normally to requests, it is `"GOOD"`. If it has missed one heartbeat, it is `"BAD"`. If it has been declared failed by the supervision, which occurs after missing heartbeats for about 15 seconds, it will be marked `"FAILED"`.
-  - `SyncStatus`: The last sync status reported by the node. This value is primarily used to determine the value of `Status`. Possible values include `"UNKNOWN"`, `"UNDEFINED"`, `"STARTUP"`, `"STOPPING"`, `"STOPPED"`, `"SERVING"`, `"SHUTDOWN"`.
-  - `ShortName`: A string representing the shortname of the server, e.g. `"DBServer1"`.
-  - `Timestamp`: ISO 8601 timestamp specifying the last heartbeat received.
-  - `Host`: An optional string, specifying the host machine if known.
+  - `Version`: Version String of ArangoDB used by that node.
+  - `Engine`: Storage Engine used by that node.
+  - `Status`: A string indicating the health of the node as assessed by the supervision (agency). This should be considered primary source of truth for coordinator and dbservers node health. If the node is responding normally to requests, it is `"GOOD"`. If it has missed one heartbeat, it is `"BAD"`. If it has been declared failed by the supervision, which occurs after missing heartbeats for about 15 seconds, it will be marked `"FAILED"`.
+
+  Additionally it will also have the following attributes for
+    - Coordinators and DBServer:
+      - `SyncStatus`: The last sync status reported by the node. This value is primarily used to determine the value of `Status`. Possible values include `"UNKNOWN"`, `"UNDEFINED"`, `"STARTUP"`, `"STOPPING"`, `"STOPPED"`, `"SERVING"`, `"SHUTDOWN"`.
+      - `ShortName`: A string representing the shortname of the server, e.g. `"Coordinator0001"`.
+      - `Timestamp`: ISO 8601 timestamp specifying the last heartbeat received.
+      - `Host`: An optional string, specifying the host machine if known.
+    - Only Coordinators:
+      - `AdvertisedEndpoint`: A string representing the advertised endpoint, if set. (e.g. external IP address or load balancer, optional)
+    - Agents:
+        - "Leader": ID of the agent this node regards as leader.
+        - "Leading": Whether this agent is the leader (true) or not (false).
+        - "LastAckedTime": Time since last `acked` in seconds.
+
 
 @RESTRETURNCODES
 
